src/main/java/com/example/restpolygon/error/exception/StockAlreadyExistException.java
package com.example.restpolygon.error.exception;

public class StockAlreadyExistException extends Exception {
	public StockAlreadyExistException(String message) {
		super(message);
	}

}
